--- a/src/pages/plans-and-pricing.astro
+++ b/src/pages/plans-and-pricing.astro
@@ -116,7 +116,7 @@ const testimonials = [
     role: "",
     company: "",
     image: "/images/client-pictures/Antonio-DAlelio-jpg.webp",
-    validated: false
+    validated: true
   },
   {
     quote: "My only regret is that I didn't do this much sooner. Everyone who runs a business should have an admin assistant!",
