--- a/src/pages/plans-and-pricing.astro
+++ b/src/pages/plans-and-pricing.astro
@@ -95,7 +95,15 @@ const comparisonRows = [
 
 const testimonials = [
   {
-    quote: "It's impossible to know what freedom feels like until you're living it. Anke has made possible what I couldn't have imagined",
+    quote: "It's impossible to know what freedom feels like until you're living it. Anke has made possible what I couldn't have imagined.",
+    name: "Athena Simpson",
+    role: "CEO, Unrestricted Ventures",
+    company: "",
+    image: "/images/client-pictures/Athena-Simpson.jpeg",
+    validated: true
+  },
+  {
+    quote: "My prior assistant - who worked in my office and who I hired myself without Helm - lost my trust and the trust of my team. I was hesitant to delegate sensitive tasks ever again. But I gave Helm a chance and they have changed the game for our company.",
     name: "Dan Lifton",
     role: "CEO, Quality of Life Labs",
     company: "",
@@ -103,23 +111,23 @@ const testimonials = [
     validated: true
   },
   {
-    quote: "My prior assistant - who worked in my office and who I hired myself without Helm - lost my trust and the trust of my team. I was hesitant to delegate sensitive tasks ever again until I gave Helm a chance and they have changed the game for our company.",
+    quote: "We were seeking greater accountability throughout our organization. But I had only one person to look to for accountability… me. And I needed help. Thanks to a single hire and someone following up on all of the open loops, we're in a different world now!",
     name: "Jay Kaufman",
-    role: "CEO, Paragon Laboratories",
+    role: "CEO, Paragon Laboratory",
     company: "",
     image: "/images/client-pictures/Jay-Kaufman.webp",
     validated: true
   },
   {
-    quote: "We were seeking greater accountability throughout our organization. But I had only one person to look to for accountability... me. And I needed help. Thanks to a single hire and someone following up on all of the open loops, we're in a different world now!",
-    name: "Antonio D'Alelio",
-    role: "",
+    quote: "My only regret is that I didn't do this much sooner. Everyone who runs a business should have an admin assistant!",
+    name: "Ann Hambly",
+    role: "CEO, 1st Service Solutions",
     company: "",
-    image: "/images/client-pictures/Antonio-DAlelio-jpg.webp",
+    image: "/images/client-pictures/Ann-Hambly.jpeg",
     validated: true
   },
   {
-    quote: "My only regret is that I didn't do this much sooner. Everyone who runs a business should have an admin assistant!",
+    quote: "When I tell my friends about Marie (my EA), they're jealous about what she brings. She's been trained by Helm on how to build a dashboard and manage our metrics, how to document our vision and a whole bunch more.",
     name: "Ed Mafoud",
     role: "CEO, Damascus Bakery",
     company: "",
@@ -127,7 +135,7 @@ const testimonials = [
     validated: true
   },
   {
-    quote: "When I tell my friends about Marie (my EA), they're jealous about what she brings. She's been trained by Helm on how to build a dashboard and manage our metrics, how to document our values and a whole bunch more.",
+    quote: "After 3 years of heavy investment in our product, our startup was ready to scale sales quickly. Helm armed us with 5 exceptional inside salespeople to grow and qualify our leads - remarkable and consistent quality!!",
     name: "Pramod Sajja",
     role: "CEO, Paramount Software",
     company: "",
@@ -135,27 +143,19 @@ const testimonials = [
     validated: true
   },
   {
-    quote: "After 3 years of heavy investment in our product, our startup was ready to scale sales quickly. Helm armed us with 5 exceptional inside salespeople to grow and qualify our leads - remarkable and consistent quality!",
-    name: "James Scearmin",
-    role: "CEO, Zoi Paws",
+    quote: "Our business has gone through lots of growing pains. At some point, it was time for me to buy my sanity with a project manager. But what I got was more than just my sanity, I got a world class operations manager.",
+    name: "James Scarmozzino",
+    role: "CEO, Zesty Paws",
     company: "",
     image: "/images/client-pictures/Antonio-DAlelio-jpg.webp",
     validated: true
   },
   {
-    quote: "Our business has gone through lots of growing pains. At some point, it was time for me to buy my sanity with a project manager. But what I got was more than just my sanity, I got a world class operations manager.",
+    quote: "I loved our first remote virtual assistant so much I hired a 2nd one. They started out in support but within 1 year, each was managing different regions for our international operation.",
     name: "Matthew Warnock",
-    role: "CEO, Ridge Herbicide",
+    role: "CEO, Ridgecrest Herbals",
     company: "",
     image: "/images/client-pictures/Matthew-Warnock.webp",
-    validated: true
-  },
-  {
-    quote: "Freedom is indescribable until experienced. Anke made the unimaginable possible. Every entrepreneur should use Helm!",
-    name: "Athena Simpson",
-    role: "CEO, Unrestricted Ventures",
-    company: "",
-    image: "/images/client-pictures/Athena-Simpson.jpeg",
     validated: true
   }
 ];
